hphp/hack/test/typecheck/class_meth_dollarsign.php
<?hh

class Foo {}

<<__EntryPoint>>
function test(): void {
  $x = meth_caller('x$x', 'foo');
  $y = meth_caller('Foo', 'bar$');
}
